globex/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: globex
  name: globex
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: globex
          image: lrochette/globex:1.6.56
